# Agentic_Planner

./: .dockerignore  .env.name  API_DOCUMENTATION.md  DOCUMENTATION.md  Dockerfile  RATE_LIMITING_GUIDE.md  README.md  Schema.py  docker-compose.yml  main.py  pyproject.toml  railway.py  streamlit_app.py  test_direct_response.py  v1.0_system_planning.md
Documents/: Decisions.md  Requirementst.txt  SYSTEM_REQUIREMENTS.md  V1.0_update.md  V2.0_update.md
agent_file/agent/: agentic_workflow.py
agent_file/prompt_library/: prompt.py  prompt_maker.py
agent_file/prompt_library/versions/: v001.txt  v002.txt  v003.txt  v004.txt
agent_file/tools/: flight_search.py  hotel_search.py  place_search_tool.py  railway_search.py  weather_info_tool.py
agent_file/utils/: flight_search.py  hotel_search.py  model_loader.py  place_info_search.py  railway_search_util.py  railway_utils.py
agent_file/utils/station_resolver/: stations.json  stations_init.py  stations_revolver.py
backend/: mongo.py
backend/controller/: query_controller.py
backend/supabase_client/: auth.py  db_operations.py  storage_operations.py  supabase_init.py
config/: config.yaml
frontend/app/: page.tsx
llmops/: guardrails.py  model_router.py  prompt_registry.py  token_tracker.py  trace_service.py
service/: cache_service.py  verify_token.py
tests/: test_api.py
