[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.134.0",
    "langchain>=1.2.10",
    "langchain-google-community[places]>=3.0.5",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "pandas>=2.3.0",
    "requests>=2.32.5",
    "setuptools>=82.0.1",
    "starlette>=0.52.1",
    "streamlit>=1.54.0",
    "supabase>=2.28.3",
    "uvicorn>=0.41.0",
]
